Chapter06/thoughts_backend/kubernetes/deployment.yaml
---
# what it is and its name
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoughts-backend
  labels:
    app: thoughts-backend
  namespace: example
# contains how many pods we should keep and the template for each pod.
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thoughts-backend
  # defines the containers in its own spec section
  template:
    metadata:
      labels:
        app: thoughts-backend
    spec:
      containers:
        - name: thoughts-backend-service
          image: thoughts_server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
        - name: thoughts-backend-db
          image: thoughts_backend_db:latest
          imagePullPolicy: Never
