Chapter06/thoughts_backend/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thoughts-backend-ingress
  namespace: example
spec:
  rules:
    # multiple services can be exposed on the same nodes, they get distinguished by their hostname
    - host: thoughts.example.local
      http:
        paths:
          - backend:
              serviceName: thoughts-service
              # make the service be exposed to the nodes on port 80
              servicePort: 80
            path: /
